# aws-demo-environment

./: .cspell.config.yaml  .editorconfig  .gitattributes  .gitignore  .mise.toml  .pre-commit-config.yaml  .terraform.lock.hcl  CLAUDE.md  Makefile  README.md  backend.tf  cdn.tf  certificates.tf  commitlint.config.mjs  compute.tf  data.tf  endpoints.tf  locals.tf  main.tf  moved.tf  network.tf  outputs.tf  providers.tf  pyproject.toml  security.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
.claude/: settings.json
.claude/plans/: 01-initialize-repository.md  02-initialize Claude.md  03-initialize-terraform-scaffolding.md  04-00-aws-demo-environment-architecture.md  04-01-implement-root-module.md  04-02-implement-bootstrap-module.md  04-03-implement-lambda-destroyer.md  05-bootstrap-terraform.md  10-enable-cloudfront-distribution.md  11-fix-documentation-inconsistencies.md
.claude/prompts/: new-module.md  tf-apply.md  tf-plan.md
.claude/scripts/: aws-sso-credentials.sh
.cspell/: project-words.txt
.github/: dependabot.yml  renovate.json
.github/workflows/: conventional-commits.yml  lint.yml
assets/static/: index.html  script.js  style.css
bootstrap/: .terraform.lock.hcl  README.md  bootstrap-state-bucket.tf  ecr.tf  lambda.tf  main.tf  outputs.tf  secrets.tf  state.tf  terraform.tfvars.example  variables.tf
bootstrap/lambda-destroyer/: Dockerfile  handler.py
docs/: ai-instructions.md
docs/claude/: plans.md
modules/application-load-balancer/: README.md  (+3 more)
scripts/: setup-s3-user-mfa.sh  terraform-validate-module.sh  user_data.sh
(+47 files in other folders)
